plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'me.jing.kecheng'
    compileSdk 35

    defaultConfig {
        applicationId "me.jing.kecheng"
        minSdk 24
        targetSdk 35
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

dependencies {

    implementation "com.upex.contract:bitget-java-sdk-api:1.0.1-SNAPSHOT"



    implementation 'org.projectlombok:lombok:1.18.34'

    // 其他依赖保持不变
    implementation 'org.slf4j:slf4j-api:2.0.12'

    implementation 'org.apache.commons:commons-lang3:3.14.0'



    // 直接指定 Material Design 2 版本（关键修改）
    implementation 'com.google.android.material:material:1.8.0'
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
    implementation 'de.hdodenhof:circleimageview:3.1.0'

    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}